[package]
name = "lez_signature_bench_programs"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
risc0-zkvm.workspace = true
nssa_core.workspace = true
serde.workspace = true
k256 = { workspace = true, features = ["arithmetic"] }
p256 = { workspace = true, features = ["arithmetic"] }
ed25519-dalek.workspace = true
hbs-lms.workspace = true
sha2.workspace = true
tiny-keccak.workspace = true

[[bin]]
name = "ecdsa_secp256k1"
path = "src/bin/ecdsa_secp256k1.rs"
test = false

[[bin]]
name = "schnorr_secp256k1"
path = "src/bin/schnorr_secp256k1.rs"
test = false

[[bin]]
name = "ed25519"
path = "src/bin/ed25519.rs"
test = false

[[bin]]
name = "ecdsa_p256"
path = "src/bin/ecdsa_p256.rs"
test = false

[[bin]]
name = "lms"
path = "src/bin/lms.rs"
test = false

[[bin]]
name = "noop"
path = "src/bin/noop.rs"
test = false

[[bin]]
name = "redstone"
path = "src/bin/redstone.rs"
test = false
